--- a/depression-rice.html
+++ b/depression-rice.html
@@ -26,11 +26,52 @@
           <a class="nav-link" href="./potato-soup.html">Potato Soup</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="./depression-rice.html">Depression rice <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./depression-rice.html">Depression Rice <span class="sr-only">(current)</span></a>
           </li>
       </ul>
     </div>
   </nav>
+
+  <h1>Depression Rice</h1>
+  <hr/>
+  <div id="toleft" class="flex-container">
+      <div class="picbox">
+        <img src="./rice-square.jpeg">
+      </div>
+      <p class="text">This recipe is... not very good. The result of a stressful finals week where I, still single, lost all control
+          of myself in the attempt to get my stomach to shut up so I could focus on studying when everything seemed to taste the same.
+          I needed a new flavor, so I made one with what I had. I look back at this and laugh at the things I did when I was single, so
+          I included it here as a memory. Serves one while they dejectedly watch cartoons on the couch, head spinning from exam stress.
+      </p>
+  </div>
+  <div id="toleft" class="flex-container">
+      <div class="supply-box">
+          <h2>You will need:</h2>
+          <ul>
+              <li>1/2 cup white rice</li>
+              <li>onion powder</li>
+              <li>garlic powder</li>
+              <li>parsley flakes</li>
+              <li>paprika</li>
+              <li>salt</li>
+          </ul>
+          <hr class="boxrule"/>
+          <ul>
+              <li>rice cooker</li>
+          </ul>
+      </div>
+      <ol class="directions">
+          <li>Cook the rice in the rice cooker</li>
+          <li>Add the garlic and onion powder, parsley and paprika. However much you think it needs. Use three times the paprika
+              than the amount you used of anything else.
+          </li>
+          <li>Put a lot of salt on it. The dish will taste very bitter without it.</li>
+          <li>Stir and eat.</li>
+          <li>Question your life choices.</li>
+      </ol>
+  </div>
+  <div class="spacer"></div>
+
   <p class="footer-container"><a class="footer" href=https://github.com/derekanderson98/260-cp1.git>
     Gihub repository for this project</a></p>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
