--- a/fried-noodles.html
+++ b/fried-noodles.html
@@ -26,11 +26,65 @@
           <a class="nav-link" href="./potato-soup.html">Potato Soup</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./depression-rice.html">Depression rice</a>
+            <a class="nav-link" href="./depression-rice.html">Depression Rice</a>
           </li>
       </ul>
     </div>
   </nav>
+
+  <h1>Fried Noodles</h1>
+  <hr/>
+  <div id="toleft" class="flex-container">
+      <div class="picbox">
+        <img src="./noodles-square.jpeg">
+      </div>
+      <p class="text">This recipe is a favorite of my wife's. I learned the recipe on my mission and thought nothing of it until I craved
+        it randomly. My wife smelled it and instantly wanted to try it. One bite and it was an instant hit: now I make it almost every week!
+        Unfortunately this recipe involves a lot of guesswork, but on the bright side it is very flexible! If you don't like spicy dishes,
+        you can easily substitute a milder sauce. If you don't like the vegetables or meat you can easily substitute them as well.
+        It works whether your veggies are fresh or frozen. Serves two.
+      </p>
+  </div>
+  <div id="toleft" class="flex-container">
+      <div class="supply-box">
+          <h2>You will need:</h2>
+          <ul>
+              <li>2 packages of ramen noodles</li>
+              <li>1/2 cup chopped bell peppers, various colors</li>
+              <li>1 cup diced onions</li>
+              <li>1 all-beef frank, diced</li>
+              <li>vegetable oil</li>
+              <li>shcezuan sauce</li>
+              <li>2 large eggs</li>
+          </ul>
+          <hr class="boxrule"/>
+          <ul>
+              <li>large frying pan</li>
+              <li>spatula</li>
+              <li>small bowl</li>
+              <li>small saucepan</li>
+              <li>strainer</li>
+          </ul>
+      </div>
+      <ol class="directions">
+          <li>If you are using fresh vegetables only, add a small amount of vegetable oil to the frying pan. Sautee the beef frank,
+              bell peppers, and onions on medium heat using the spatula to move the mixture around until the onions are yellow and
+              you can see slight amounts of browning on the vegetables. Remove from heat and put mixture into small bowl.
+          </li>
+          <li>Prepare the ramen in the saucepan as stated on the instructions, do not add seasoning. Strain.</li>
+          <li>Put a small amount of vegetable oil in the pan and add the noodles. Fry on medium heat for about a minute, 
+              using the spatula to try to break clumps.
+          </li>
+          <li>Add the vegetable mixture back into the pan, using the spatula to mix until evenly distributed.</li>
+          <li>Add the shezuan sauce, mix until evenly distributed.</li>
+          <li>Using the spatula, make a small opening in the noodles and crack egg into it. Mix with the rest of the dish.
+              Repeat for other egg and fry until eggs are completely cooked.
+          </li>
+          <li>Remove from heat and serve.</li>
+      </ol>
+  </div>
+  <div class="spacer"></div>
+
   <p class="footer-container"><a class="footer" href=https://github.com/derekanderson98/260-cp1.git>
     Gihub repository for this project</a></p>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
