--- a/index.html
+++ b/index.html
@@ -26,11 +26,25 @@
           <a class="nav-link" href="./potato-soup.html">Potato Soup</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./depression-rice.html">Depression rice</a>
+            <a class="nav-link" href="./depression-rice.html">Depression Rice</a>
           </li>
       </ul>
     </div>
   </nav>
+
+  <div id="gray" class="flex-container">
+      <div class = "pic"><a href="./fried-noodles.html"><img src="./noodles-wide.jpeg"/></a></div>
+      <div class = "pic"><a href="./potato-soup.html"><img src="./soup-wide.jpeg"/></a></div>
+      <div class = "pic"><a href="./depression-rice.html"><img src="./rice-wide.jpeg"/></a></div>
+  </div>
+  <hr/>
+  <h1>I love to cook!</h1>
+  <p class="margin-p">I might be a young college student, studying computer science of all things, but I love to cook!
+      I'm not very good at it yet but I'm getting better, and though most of what I cook is simple stuff, I have a few
+      recipes I've made over the years, which I decided to put here!
+  </p>
+  <div class="spacer"></div>
+
   <p class="footer-container"><a class="footer" href=https://github.com/derekanderson98/260-cp1.git>
     Gihub repository for this project</a></p>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
