--- a/potato-soup.html
+++ b/potato-soup.html
@@ -26,11 +26,60 @@
           <a class="nav-link" href="./potato-soup.html">Potato Soup <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./depression-rice.html">Depression rice</a>
+            <a class="nav-link" href="./depression-rice.html">Depression Rice</a>
           </li>
       </ul>
     </div>
   </nav>
+
+  <h1>Potato Soup</h1>
+  <hr/>
+  <div id="toleft" class="flex-container">
+      <div class="picbox">
+        <img src="./soup-square.jpeg">
+      </div>
+      <p class="text">I got this recipe from my mother-in-law. I enjoy soup and was dabbling in making some of my own. I mentioned this
+          on the phone and she texted this recipe and another of hers to me to try. I have yet to try the other one but this soup seemed
+          too good not to try! My wife enjoys it a lot as well, and as it's her mother's recipe I imagine it reminds her of her childhood.
+      </p>
+  </div>
+  <div id="toleft" class="flex-container">
+      <div class="supply-box">
+          <h2>You will need:</h2>
+          <ul>
+              <li>4 tbs butter</li>
+              <li>1/2 cup diced onion</li>
+              <li>1/2 cup shredded carrot</li>
+              <li>1/2 cup chopped celery</li>
+              <li>4 large potatoes, diced</li>
+              <li>1 1/2 tsp salt</li>
+              <li>6 cups chicken broth</li>
+              <li>4 tbs flour</li>
+              <li>2 cups half & half</li>
+              <li>1/2 tsp pepper</li>
+              <li>4-6 slices bacon, cooked crisp and crumbled</li>
+          </ul>
+          <hr class="boxrule"/>
+          <ul>
+              <li>large cooking pot with lid</li>
+              <li>stirring spoon</li>
+              <li>mixing bowl</li>
+          </ul>
+      </div>
+      <ol class="directions">
+          <li>Mix half & half with flour in mixing bowl and let set so the flour gets fully absorbed.</li>
+          <li>Melt butter in pot and sautee onions, carrots, and celery until tender.</li>
+          <li>Add chicken broth, salt, and diced potatoes, bring to a boil, then reduce heat, cover with lid, and simmer
+              for 10-12 minutes or until potatoes are tender.
+          </li>
+          <li>Stir flour/milk mixture slowly into simmering soup and add ground pepper. Bring to a very gentle boil,
+              which will thicken the soup.
+          </li>
+          <li>Remove from heat. Stir in bacon and serve.</li>
+      </ol>
+  </div>
+  <div class="spacer"></div>
+
   <p class="footer-container"><a class="footer" href=https://github.com/derekanderson98/260-cp1.git>
     Gihub repository for this project</a></p>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
